[docker]Merge linking and creating php-fpm directory in one layer

--- a/traditional/Dockerfile
+++ b/traditional/Dockerfile
@@ -42,9 +42,6 @@ RUN apt-get update && apt-get install -y \
     php8.0-pgsql \
     php8.0-yaml
 
-# Link php-fpm binary file without version
-RUN ln -s /usr/sbin/php-fpm8.0 /usr/sbin/php-fpm
-
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin --filename composer
 
@@ -52,7 +49,9 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin -
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
 # Create directory for php-fpm socket
-RUN mkdir -p /run/php
+# Link php-fpm binary file without version
+# -p Creates missing intermediate path name directories
+RUN ln -s /usr/sbin/php-fpm8.0 /usr/sbin/php-fpm && mkdir -p /run/php
 
 # Install yarn
 RUN npm install -g yarn
