--- a/.github/workflows/traditional/cd.yml
+++ b/.github/workflows/traditional/cd.yml
@@ -4,50 +4,19 @@ on:
     push:
         branches:
             - master
-        paths-ignore:
-            - "*.md"
+        paths:
+            - "traditional/**"
 
 env:
     IMAGE_OWNER: sylius
     IMAGE_NAME: standard
     IMAGE_VERSION: 1.11
+    IMAGE_TYPE: traditional
 
 jobs:
-    cd-headless:
-        runs-on: ubuntu-latest
-        name: CD - build and deploy headless image
-        env:
-            IMAGE_TYPE: headless
-        steps:
-            -
-                name: checkout code
-                uses: actions/checkout@v2
-            -
-                name: login to Docker Hub
-                uses: docker/login-action@v1
-                with:
-                    username: ${{ secrets.DOCKER_HUB_USERNAME }}
-                    password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-            -
-                name: install buildx
-                id: buildx
-                uses: crazy-max/ghaction-docker-buildx@v1
-                with:
-                    buildx-version: latest
-            -
-                name: build and push the image
-                run: |
-                    docker buildx build \
-                        --push \
-                        --no-cache \
-                        --tag ${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}-${{ env.IMAGE_TYPE }} \
-                        --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 headless/
-
-    cd-traditional:
+    cd:
         runs-on: ubuntu-latest
         name: CD - build and deploy traditional image
-        env:
-            IMAGE_TYPE: traditional
         steps:
             -
                 name: checkout code
