[maintenance]Create test pipeline of a production-ish Dockerfile

--- a/.github/workflows/ci-headless.yml
+++ b/.github/workflows/ci-headless.yml
@@ -2,11 +2,15 @@ name: CI - build headless image
 
 on:
     push:
+        branches-ignore:
+            - master
         paths:
             - "headless/**"
+            - ".github/**"
     pull_request:
         paths:
             - "headless/**"
+            - ".github/**"
 
 jobs:
     ci-headless:
