--- a/headless/Dockerfile
+++ b/headless/Dockerfile
@@ -18,6 +18,7 @@ RUN add-apt-repository ppa:ondrej/php && add-apt-repository ppa:ondrej/nginx
 RUN apt-get update && apt-get install -y \
     nginx \
     php8.0 \
+    php8.0-apcu \
     php8.0-common \
     php8.0-cli \
     php8.0-xml \
