Use CMD instead of ENTRYPOINT

--- a/headless/Dockerfile
+++ b/headless/Dockerfile
@@ -61,4 +61,4 @@ WORKDIR /app
 
 EXPOSE 80
 
-ENTRYPOINT ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
+CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
