--- a/traditional/Dockerfile
+++ b/traditional/Dockerfile
@@ -69,4 +69,4 @@ WORKDIR /app
 
 EXPOSE 80
 
-ENTRYPOINT ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
+CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
