--- a/traditional/Dockerfile
+++ b/traditional/Dockerfile
@@ -24,26 +24,27 @@ RUN apt-get update && apt-get install -y \
     nginx \
     php8.0 \
     php8.0-apcu \
+    php8.0-calendar \
     php8.0-common \
     php8.0-cli \
-    php8.0-xml \
-    php8.0-curl \
-    php8.0-gd \
-    php8.0-intl \
-    php8.0-opcache \
-    php8.0-pdo \
+    php8.0-common \
     php8.0-ctype \
-    php8.0-calendar \
+    php8.0-curl \
     php8.0-dom \
     php8.0-exif \
-    php8.0-xsl \
-    php8.0-zip \
     php8.0-fpm \
-    php8.0-mysql \
+    php8.0-gd \
+    php8.0-intl \
     php8.0-mbstring \
-    php8.0-sqlite \
+    php8.0-mysql \
+    php8.0-opcache \
+    php8.0-pdo \
     php8.0-pgsql \
-    php8.0-yaml
+    php8.0-sqlite \
+    php8.0-xml \
+    php8.0-xsl \
+    php8.0-yaml \
+    php8.0-zip
 
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin --filename composer
