--- a/.github/workflows/ci-traditional.yml
+++ b/.github/workflows/ci-traditional.yml
@@ -31,9 +31,10 @@ jobs:
                     docker network create --driver bridge sylius_network
                     docker buildx build \
                     --no-cache \
-                    --network sylius_network \
+                    --cache-to type=local,dest=docker-build-path
                     --tag sylius-traditional \
-                    --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 traditional/
+                    --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 \
+                    traditional/
             -
                 name: Shutdown default MySQL
                 run: sudo service mysql stop
@@ -49,7 +50,13 @@ jobs:
                         -d mysql:5.7
             -
                 name: Setup Sylius Store
-                run: |                    
+                run: |
+                    docker build \
+                        --network sylius_network \
+                        --tag sylius-traditional \
+                        --cache-from docker-build-path \
+                        .github/workflows/
+
                     docker run \
                         --net sylius_network \
                         -p 80:80/tcp \
