--- a/.github/workflows/ci-traditional.yml
+++ b/.github/workflows/ci-traditional.yml
@@ -31,7 +31,7 @@ jobs:
                     docker network create --driver bridge sylius_network
                     docker buildx build \
                     --no-cache \
-                    --cache-to=type=local,dest=docker-build-path
+                    --cache-to=type=local,dest=docker-build-path \
                     --tag sylius-traditional \
                     --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 \
                     traditional/
