--- a/.github/workflows/ci-traditional.yml
+++ b/.github/workflows/ci-traditional.yml
@@ -34,7 +34,7 @@ jobs:
                         --no-cache \
                         --tag sylius-traditional \
                         --build-arg BUILDKIT_INLINE_CACHE=1 \
-                        --platform linux/arm64 \
+                        --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 \
                         traditional/
             -
                 name: Shutdown default MySQL
