--- a/.github/workflows/cd-traditional.yml
+++ b/.github/workflows/cd-traditional.yml
@@ -14,7 +14,7 @@ env:
     IMAGE_TYPE: traditional
 
 jobs:
-    cd-traditional:
+    cd-traditional-ubuntu:
         runs-on: ubuntu-latest
         steps:
             -
@@ -39,4 +39,5 @@ jobs:
                         --push \
                         --no-cache \
                         --tag ${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}-${{ env.IMAGE_TYPE }} \
-                        --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 traditional/
+                        --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 \
+                        traditional/ubuntu/
