--- a/.github/workflows/ci-traditional.yml
+++ b/.github/workflows/ci-traditional.yml
@@ -13,7 +13,7 @@ on:
             - ".github/**"
 
 jobs:
-    ci-traditional:
+    ci-traditional-ubuntu:
         runs-on: ubuntu-latest
         steps:
             -
@@ -30,4 +30,5 @@ jobs:
                 run: |
                     docker buildx build \
                     --no-cache \
-                    --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 traditional/
+                    --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 \
+                    traditional/ubuntu/
