--- a/.github/workflows/cd-traditional.yml
+++ b/.github/workflows/cd-traditional.yml
@@ -11,10 +11,11 @@ env:
     IMAGE_OWNER: sylius
     IMAGE_NAME: standard
     IMAGE_VERSION: 1.11
-    IMAGE_TYPE: traditional
 
 jobs:
     cd-traditional-ubuntu:
+        env:
+            IMAGE_TYPE: traditional
         runs-on: ubuntu-latest
         steps:
             -
@@ -41,3 +42,33 @@ jobs:
                         --tag ${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}-${{ env.IMAGE_TYPE }} \
                         --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 \
                         traditional/ubuntu/
+
+    cd-traditional-alpine:
+        env:
+            IMAGE_TYPE: traditional-alpine
+        runs-on: ubuntu-latest
+        steps:
+            -
+                name: checkout code
+                uses: actions/checkout@v2
+            -
+                name: login to Docker Hub
+                uses: docker/login-action@v1
+                with:
+                    username: ${{ secrets.DOCKER_HUB_USERNAME }}
+                    password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+            -
+                name: install buildx
+                id: buildx
+                uses: crazy-max/ghaction-docker-buildx@v1
+                with:
+                    buildx-version: latest
+            -
+                name: build and push the image
+                run: |
+                    docker buildx build \
+                        --push \
+                        --no-cache \
+                        --tag ${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}-${{ env.IMAGE_TYPE }} \
+                        --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 \
+                        traditional/alpine/
