--- a/.github/workflows/ci-traditional.yml
+++ b/.github/workflows/ci-traditional.yml
@@ -32,3 +32,23 @@ jobs:
                     --no-cache \
                     --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 \
                     traditional/ubuntu/
+
+    ci-traditional-alpine:
+        runs-on: ubuntu-latest
+        steps:
+            -
+                name: checkout code
+                uses: actions/checkout@v2
+            -
+                name: install buildx
+                id: buildx
+                uses: crazy-max/ghaction-docker-buildx@v1
+                with:
+                    buildx-version: latest
+            -
+                name: build headless image
+                run: |
+                    docker buildx build \
+                    --no-cache \
+                    --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 \
+                    traditional/alpine/
