--- a/.github/workflows/cd-headless.yml
+++ b/.github/workflows/cd-headless.yml
@@ -18,22 +18,22 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             -
-                name: checkout code
-                uses: actions/checkout@v2
+                name: Checkout Code
+                uses: actions/checkout@v3
             -
-                name: login to Docker Hub
-                uses: docker/login-action@v1
+                name: Login to Docker Hub
+                uses: docker/login-action@v2
                 with:
                     username: ${{ secrets.DOCKER_HUB_USERNAME }}
                     password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
             -
-                name: install buildx
+                name: Install Buildx
                 id: buildx
                 uses: crazy-max/ghaction-docker-buildx@v1
                 with:
                     buildx-version: latest
             -
-                name: build and push the image
+                name: Build and Push
                 run: |
                     docker buildx build \
                         --push \
