--- a/.github/workflows/ci-headless.yml
+++ b/.github/workflows/ci-headless.yml
@@ -17,16 +17,16 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             -
-                name: checkout code
-                uses: actions/checkout@v2
+                name: Checkout Code
+                uses: actions/checkout@v3
             -
-                name: install buildx
+                name: Install Buildx
                 id: buildx
                 uses: crazy-max/ghaction-docker-buildx@v1
                 with:
                     buildx-version: latest
             -
-                name: build headless image
+                name: Build Image
                 run: |
                     docker buildx build \
                     --no-cache \
