--- a/.github/workflows/ci-traditional-project.yml
+++ b/.github/workflows/ci-traditional-project.yml
@@ -13,13 +13,12 @@ on:
             - "traditional/**"
 
 jobs:
-    run-app:
+    run-traditional-ubuntu-app:
         runs-on: ubuntu-latest
-
         steps:
             -
-                name: checkout code
-                uses: actions/checkout@v2
+                name: Checkout Code
+                uses: actions/checkout@v3
             -
                 name: Shutdown default MySQL
                 run: sudo service mysql stop
@@ -40,7 +39,45 @@ jobs:
                     docker build \
                         --network sylius_network \
                         --tag sylius-traditional \
-                        .github/workflows/
+                        .github/workflows/traditional/ubuntu/
+
+                    docker run \
+                        --net sylius_network \
+                        -p 80:80/tcp \
+                        -d sylius-traditional
+            -
+                name: Health Check Store
+                run: |
+                    sleep 10
+                    curl -L --fail http://localhost:80 || exit 1
+
+    run-traditional-alpine-app:
+        runs-on: ubuntu-latest
+        steps:
+            -
+                name: Checkout Code
+                uses: actions/checkout@v3
+            -
+                name: Shutdown default MySQL
+                run: sudo service mysql stop
+            -
+                name: Setup MySQL
+                run: |
+                    docker network create --driver bridge sylius_network
+                    docker run \
+                        --platform linux/amd64 \
+                        -e MYSQL_ALLOW_EMPTY_PASSWORD=true \
+                        -p 3306:3306/tcp \
+                        --name mysql \
+                        --net sylius_network \
+                        -d mysql:5.7
+            -
+                name: Setup Sylius Store
+                run: |
+                    docker build \
+                        --network sylius_network \
+                        --tag sylius-traditional \
+                        .github/workflows/traditional/alpine/
 
                     docker run \
                         --net sylius_network \
