[docker][ubuntu][traditional]Install cron

--- a/traditional/ubuntu/.docker/supervisord.conf
+++ b/traditional/ubuntu/.docker/supervisord.conf
@@ -12,3 +12,8 @@ autostart = true
 command = /usr/sbin/php-fpm -F
 user = root
 autostart = true
+
+[program:cron]
+command = cron -f
+user = root
+autostart = true
