--- a/.github/workflows/traditional/alpine/Dockerfile
+++ b/.github/workflows/traditional/alpine/Dockerfile
@@ -9,7 +9,7 @@ ENV COMPOSER_ALLOW_SUPERUSER=1
 
 WORKDIR /
 
-RUN composer create-project sylius/sylius-standard app "dev-master" --no-scripts --no-progress --no-interaction --no-plugins --no-install
+RUN composer create-project sylius/sylius-standard app "${SYLIUS_VERSION}" --no-scripts --no-progress --no-interaction --no-plugins --no-install
 
 WORKDIR /app/
 
