--- a/.github/workflows/ci-headless.yml
+++ b/.github/workflows/ci-headless.yml
@@ -11,9 +11,15 @@ on:
         paths:
             - "headless/**"
             - ".github/**"
+    schedule:
+        - cron: "0 1 * * 6" # Run at 1am every Saturday
+    workflow_dispatch: ~
 
 jobs:
     ci-headless:
+        strategy:
+            matrix:
+                sylius_version: [1.11,1.12]
         runs-on: ubuntu-latest
         steps:
             -
@@ -29,5 +35,6 @@ jobs:
                 name: Build Image
                 run: |
                     docker buildx build \
+                    --build-arg SYLIUS_VERSION=${{ matrix.sylius_version }} \
                     --no-cache \
                     --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 headless/
