--- a/.github/workflows/ci-traditional.yml
+++ b/.github/workflows/ci-traditional.yml
@@ -60,5 +60,6 @@ jobs:
                 run: |
                     docker buildx build \
                     --no-cache \
+                    --build-arg SYLIUS_VERSION=${{ matrix.sylius_version }} \
                     --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 \
                     traditional/alpine/
