--- a/.github/workflows/ci-traditional-project.yml
+++ b/.github/workflows/ci-traditional-project.yml
@@ -19,6 +19,7 @@ jobs:
     run-traditional-ubuntu-app:
         runs-on: ubuntu-latest
         strategy:
+            fail-fast: false
             matrix:
                 sylius_version: [1.11,1.12]
         steps:
@@ -61,6 +62,7 @@ jobs:
     run-traditional-alpine-app:
         runs-on: ubuntu-latest
         strategy:
+            fail-fast: false
             matrix:
                 sylius_version: [1.11,1.12]
         steps:
