--- a/.github/workflows/ci-traditional.yml
+++ b/.github/workflows/ci-traditional.yml
@@ -20,38 +20,40 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             -
-                name: Checkout Code
-                uses: actions/checkout@v3
+                name: Set Up QEMU
+                uses: docker/setup-qemu-action@v2
             -
-                name: Install Buildx
-                id: buildx
-                uses: crazy-max/ghaction-docker-buildx@v1
-                with:
-                    buildx-version: latest
+                name: Set Up Docker Buildx
+                uses: docker/setup-buildx-action@v2
             -
                 name: Build Image
-                run: |
-                    docker buildx build \
-                    --no-cache \
-                    --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 \
-                    traditional/ubuntu/
+                uses: docker/build-push-action@v3
+                with:
+                    push: false
+                    context: "{{defaultContext}}:traditional:ubuntu"
+                    tags: sylius/standard:local
+                    platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
+                    cache-from: type=gha
+                    cache-to: type=gha
+                    load: false
 
     ci-traditional-alpine:
         runs-on: ubuntu-latest
         steps:
             -
-                name: Checkout Code
-                uses: actions/checkout@v3
+                name: Set Up QEMU
+                uses: docker/setup-qemu-action@v2
             -
-                name: Install Buildx
-                id: buildx
-                uses: crazy-max/ghaction-docker-buildx@v1
-                with:
-                    buildx-version: latest
+                name: Set Up Docker Buildx
+                uses: docker/setup-buildx-action@v2
             -
                 name: Build Image
-                run: |
-                    docker buildx build \
-                    --no-cache \
-                    --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 \
-                    traditional/alpine/
+                uses: docker/build-push-action@v3
+                with:
+                    push: false
+                    context: "{{defaultContext}}:traditional:alpine"
+                    tags: sylius/standard:local
+                    platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
+                    cache-from: type=gha
+                    cache-to: type=gha
+                    load: false
