--- a/.github/workflows/ci-traditional.yml
+++ b/.github/workflows/ci-traditional.yml
@@ -30,7 +30,7 @@ jobs:
                 uses: docker/build-push-action@v3
                 with:
                     push: false
-                    context: "{{defaultContext}}:traditional:ubuntu"
+                    context: "{{defaultContext}}:traditional/ubuntu"
                     tags: sylius/standard:local
                     platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
                     cache-from: type=gha
@@ -66,7 +66,7 @@ jobs:
                 uses: docker/build-push-action@v3
                 with:
                     push: false
-                    context: "{{defaultContext}}:traditional:alpine"
+                    context: "{{defaultContext}}:traditional/alpine"
                     tags: sylius/standard:local
                     platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
                     cache-from: type=gha
