--- a/.github/workflows/ci-traditional.yml
+++ b/.github/workflows/ci-traditional.yml
@@ -66,10 +66,29 @@ jobs:
                 uses: docker/build-push-action@v3
                 with:
                     push: false
+                    load: false
+                    context: "{{defaultContext}}:traditional/alpine"
+                    platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
+                    cache-from: type=gha
+                    cache-to: type=gha
+
+    ci-traditional-alpine-project:
+        runs-on: ubuntu-latest
+        steps:
+            -
+                name: Set Up QEMU
+                uses: docker/setup-qemu-action@v2
+            -
+                name: Set Up Docker Buildx
+                uses: docker/setup-buildx-action@v2
+            -
+                name: Build Image
+                uses: docker/build-push-action@v3
+                with:
+                    push: false
                     load: true
                     context: "{{defaultContext}}:traditional/alpine"
                     tags: sylius/standard:local
-                    platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
                     cache-from: type=gha
                     cache-to: type=gha
             -
