remove docker compose

--- a/.github/workflows/ci-traditional.yml
+++ b/.github/workflows/ci-traditional.yml
@@ -92,17 +92,39 @@ jobs:
                     cache-from: type=gha
                     cache-to: type=gha
             -
-                name: Checkout Code
-                uses: actions/checkout@v3
-            -
-                name: Shutdown default MySQL
+                name: Shutdown Default MySQL
                 run: sudo service mysql stop
             -
                 name: Setup MySQL
                 run: |
-                    cd .github/workflows/traditional && docker compose --profile alpine up -d
+                    docker network create \
+                        --driver bridge \
+                        sylius_network
+                    
+                    docker container run \
+                        --platform linux/amd64 \
+                        -e MYSQL_ALLOW_EMPTY_PASSWORD=true \
+                        -p 3306:3306/tcp \
+                        --name mysql \
+                        --network sylius_network \
+                        -d mysql:5.7
+            -
+                name: Checkout Code
+                uses: actions/checkout@v2
+            -
+                name: Setup Sylius Store
+                run: |
+                    docker image build \
+                        --network sylius_network \
+                        --tag sylius-image-prod \
+                        .github/workflows/traditional/alpine/
+
+                    docker container run \
+                        --network sylius_network \
+                        -p 80:80/tcp \
+                        -d sylius-image-prod
             -
                 name: Health Check Store
                 run: |
-                    sleep 20
+                    sleep 5
                     curl -L --fail http://localhost:80 || exit 1
